--- a/app/styles/vars.scss
+++ b/app/styles/vars.scss
@@ -1,2 +1,9 @@
 $media_breakpoint: 48em;
 $main_background_color: #E5E5E5; //grey
+
+$primary_color: #2b4259;//#8095AA; // dark blue
+$secondary_color: #084f51;//#009EA5; // dark green
+$tertiary_color: #E0E1EF; // grey-blue   
+$quaternary_color: #EF8100; // orange
+
+
