--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,3 +1,20 @@
 {{outlet}}
-<div id="content" role="main" aria-live="polite">about contenido</div>
+<main id="main" role="main" aria-live="polite">
+	<h1 class="invisible">About</h1>
+	<section>
+		<h2 class="invisible">What is App4all</h2>
+		<p><b>App4all</b> is a collection of common application features which have been developed taking into account device capabilities, screen size, assistive technologies for users with disabilities and keyboard users.</p>
+	</section>
+	<section>
+		<h2>Check its accessibility</h2>
+		<p>Resize the screen and see how the elements adapt their size</p>
+		<p>Use only the keyboard. Move the focus with TAB or SHIFT+TAB. Watch how the application reflect where is the focus at that time. Trigger any action by pressing either "enter" or "space bar".</p>
+		<p>Users of assistive technologies can read the application properly, navigate over it by pressing the standards shortcuts and to be aware of all live changes of the application.</p>
+		<p>If you are not an user of assitive technologies but want to check how it works, install a screen reader such as <a href="http://www.chromevox.com/">ChromeVox</a> or turn on the accessibility option of your mobile phone.</p>
+	</section>
+	<section>
+		<h2>Product</h2>
+		<p>App4all is a product of <a href="http://www.bleasy.net/">Bleasy.net</a></p>
+	</section>
+</main>
 
