--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,6 @@
 {{outlet}}
-<div id="main" role="main" aria-live="polite">
+<main id="main" role="main" aria-live="polite">
+	<h1 class="invisible">Login</h1>
 	<form id="login" action {{action "authenticate" on="submit"}}>
 		<fieldset>
 			<legend>Login form</legend>
@@ -16,6 +17,6 @@
 		</fieldset>
 		<button type="submit">Log in</button>
 	</form>
-</div>
+</main>
 
  
