US23:009 - Implement validation Handler, documentation support and cleanup
Validation Handler:

-> Program a communication channel between ascendant/descendant components: child broadcaster and parent listener
-> Use this channel to implement validatable element as broadcaster and validation listener as parent listener
-> Implement a validation handler as a special validation listener which render the information

Application area component: wrap the application in a customize component in order to support inheritance.

Create the custom form component in order to handle form events

Support for detecting mobile devices with Mobile Checker initializer

Setup the documentation environment and include documentation for new components

Fix initializer tests: setup an initialization order and include in tests its dependencies from other initializers

Some cleanup: use two spaces instead of tabulations

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,6 +15,7 @@
 //@import 'a11y-test2';
 
 @import 'vars';
+@import 'error-handler';
 
 @import 'application';
 @import 'index';
@@ -23,6 +24,9 @@ main#main[role="main"] {
   padding: 15px;
 }
 
+*[hidden] {
+  display: none !important;
+}
 
 body {
   margin:0px;
@@ -45,11 +49,11 @@ button {
 
   &:hover, &:focus {
     background-color: darken($secondary_color,10%);
+    cursor:pointer;
   }
 }
 
 a:focus {
-  //border-style: dotted;
   outline: thin dotted #666666;
 }
 
