--- a/app/styles/vars.scss
+++ b/app/styles/vars.scss
@@ -1,9 +1,10 @@
-$media_breakpoint: 48em;
+$media_horizontal_breakpoint: 48em;
+$media_vertical_breakpoint: 25em;
 $main_background_color: #E5E5E5; //grey
 
 $primary_color: #2b4259;//#8095AA; // dark blue
 $secondary_color: #084f51;//#009EA5; // dark green
-$tertiary_color: #E0E1EF; // grey-blue   
+$tertiary_color: #E0E1EF; // grey-blue
 $quaternary_color: #EF8100; // orange
 
 
